--- a/BLOG/BLOG.csproj
+++ b/BLOG/BLOG.csproj
@@ -129,6 +129,7 @@
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <None Include="Scripts\_references.js" />
+    <Content Include="task.txt" />
     <Content Include="Web.config" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Blog\Index.cshtml" />
@@ -162,7 +163,6 @@
     <Content Include="Views\Home\List.cshtml" />
     <Content Include="Views\Home\SearchList.cshtml" />
     <Content Include="Views\Admin\EditBlog.cshtml" />
-    <Content Include="Views\RSS\Index.cshtml" />
     <Content Include="Views\Login\Test.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -175,6 +175,7 @@
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
     <Folder Include="Views\Base\" />
+    <Folder Include="Views\RSS\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BLL\BLL.csproj">
