实现异步提交评论功能.

--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="ArticleInfoService.cs" />
     <Compile Include="BlogInfoService.cs" />
+    <Compile Include="CommentInfoService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserInfoService.cs" />
   </ItemGroup>
