--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="ArticleInfoDal.cs" />
     <Compile Include="BlogInfoDal.cs" />
+    <Compile Include="CommentInfoDal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserInfoDal.cs" />
   </ItemGroup>
