--- a/BLOG/Web.config
+++ b/BLOG/Web.config
@@ -19,7 +19,7 @@
     <httpRuntime targetFramework="4.6.1" requestValidationMode="2.0" /><!--这里处理post允许html标签-->
     <pages>
       <namespaces>
-        <add namespace="System.Web.Optimization"/>
+        <add namespace="System.Web.Optimization" />
       </namespaces>
     </pages>
   </system.web>
@@ -40,6 +40,10 @@
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.5.0.0" newVersion="4.5.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
