增加ES存储支持

--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -56,8 +56,10 @@
     <Compile Include="BlogInfoESDal.cs" />
     <Compile Include="BlogInfoSQLDal.cs" />
     <Compile Include="BlogInfoXMLDal.cs" />
-    <Compile Include="CommentInfoDal.cs" />
+    <Compile Include="CommentInfoESDal.cs" />
+    <Compile Include="CommentInfoSQLDal.cs" />
     <Compile Include="IBlogInfoDal.cs" />
+    <Compile Include="ICommentInfoDal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserInfoDal.cs" />
   </ItemGroup>
