进一步完善ES功能.

--- a/BLOG/Web.config
+++ b/BLOG/Web.config
@@ -13,6 +13,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="DataType" value="2" />    <!--0:sql server 1:xml  2:ElasticSearch -->
+    <add key="Admin" value="Admin123456"/><!--如果使用DataType=2,则此处使用用户:Admin 密码:Admin123456登陆写博客-->
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
