添加评论列表功能

--- a/BLOG/Web.config
+++ b/BLOG/Web.config
@@ -13,7 +13,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="DataType" value="2" />    <!--0:sql server 1:xml  2:ElasticSearch -->
-    <add key="Admin" value="xxxxx"/>
+    <add key="Admin" value="a"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
