--- a/BLOG/BLOG.csproj
+++ b/BLOG/BLOG.csproj
@@ -119,7 +119,7 @@
     <Content Include="Content\Site.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
-    <Content Include="kindeditor\asp.net\bin\LitJSON.dll" />
+    <Content Include="kindeditor\asp.net\bin\LitJson.dll" />
     <Content Include="kindeditor\asp.net\demo.aspx" />
     <Content Include="kindeditor\asp.net\README.txt" />
     <Content Include="kindeditor\kindeditor-all-min.js" />
@@ -335,6 +335,7 @@
     <Content Include="asp.net\file_manager_json.ashx" />
     <Content Include="asp.net\upload_json.ashx" />
     <None Include="Properties\PublishProfiles\ZBHBlog.pubxml" />
+    <None Include="Properties\PublishProfiles\ZBHBlogWork.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
