--- a/BLOG/Web.config
+++ b/BLOG/Web.config
@@ -12,7 +12,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="DataType" value="2" />    <!--0:sql server 1:xml  2:ElasticSearch -->
+    <add key="DataType" value="2" />    <!--0:sql server 1:xml  2:ElasticSearch  3: redis  4 sqllite  -->
     <add key="Admin" value="a"/>
   </appSettings>
   <system.web>
