--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -44,6 +44,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -55,6 +56,7 @@
     <Compile Include="ArticleInfoSQLDal.cs" />
     <Compile Include="ArticleInfoESDal.cs" />
     <Compile Include="BlogInfoESDal.cs" />
+    <Compile Include="BlogInfoFactory.cs" />
     <Compile Include="BlogInfoRedisDal.cs" />
     <Compile Include="BlogInfoSQLDal.cs" />
     <Compile Include="BlogInfoXMLDal.cs" />
