--- a/BLOG/Web.config
+++ b/BLOG/Web.config
@@ -5,14 +5,14 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="ConnStr" connectionString="Data Source=(local);database=myblog;uid=sa;pwd=yonyou@123;" />
+    <add name="ConnStr" connectionString="Data Source=172.18.63.230;database=myblog;uid=sa;pwd=yonyou@123;" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="DataType" value="2" />    <!--0:sql server 1:xml  2:ElasticSearch  3: redis  4 sqllite  -->
+    <add key="DataType" value="0" />    <!--0:sql server 1:xml  2:ElasticSearch  3: redis  4 sqllite  -->
     <add key="Admin" value="a"/>
   </appSettings>
   <system.web>
