--- a/BLOG/Web.config
+++ b/BLOG/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="ConnStr" connectionString="Data Source=172.18.63.230;database=myblog;uid=sa;pwd=yonyou@123;" />
+    <add name="ConnStr" connectionString="Data Source=localhost;database=myblog;uid=sa;pwd=yonyou@123;" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
